--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="card">
+    <main class="card">
         <div class="card__images">
             <img src='./assets/image-equilibrium.jpg' alt="img">
             <div class="card__images-layer">
@@ -30,9 +30,9 @@
             <div><img src="./assets/logo.jpeg" alt=""></div>
             <div><p>Creation of <b>Raghavendra Reddy</b></p></div>
         </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
         <p>Chalenged by <a href="https://www.crio.do">Crio.Do</a>. Coded by <a href="https://github.com/raghavendrareddy23">Raghavendra Reddy</a> </p>
-    </div>
+    </footer>
 </body>
 </html>
