--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         <div class="card__title">
             <h1>Equilibrium #3429</h1>
         </div>
-        <div class="card__text">
-            <p>Our Equilibrium collection promotes balance and calm.</p>
+        <div id="info">
+            <span>Our Equilibrium collection promotes balance and calm.</span>
         </div>
         <div class="card__time">
-            <div class="card__time-left"><img src="./assets/icon-ethereum.svg" alt="img"> <h3>0.041 ETH</h3></div>
-            <div class="card__time-right"><img src="./assets//icon-clock.svg" alt="img"> <h3>3 days left</h3></div>
+            <div class="card__time-left"><img src="./assets/icon-ethereum.svg" alt="img"> <span>0.041 ETH</span></div>
+            <div class="card__time-right"><img src="./assets//icon-clock.svg" alt="img"> <span>3 days left</span></div>
         </div>
         <hr/>
         <div class="card__creator">
-            <div><img src="./assets/logo.jpeg" alt=""></div>
+            <div><img src="./assets/logo.jpeg" alt="img"></div>
             <div><p>Creation of <b>Raghavendra Reddy</b></p></div>
         </div>
     </main>
     <footer class="attribution">
-        <p>Chalenged by <a href="https://www.crio.do">Crio.Do</a>. Coded by <a href="https://github.com/raghavendrareddy23">Raghavendra Reddy</a> </p>
+        <p>Chalenged by <a href="https://www.crio.do" target="_blank">Crio.Do</a>. Coded by <a href="https://github.com/raghavendrareddy23", target="_blank">Raghavendra Reddy</a> </p>
     </footer>
 </body>
 </html>
