--- a/index.html
+++ b/index.html
@@ -19,20 +19,21 @@
             <h1>Equilibrium #3429</h1>
         </div>
         <div id="info">
-            <span>Our Equilibrium collection promotes balance and calm.</span>
+            Our Equilibrium collection promotes balance and calm.
         </div>
+
         <div class="card__time">
             <div class="card__time-left"><img src="./assets/icon-ethereum.svg" alt="img"> <span>0.041 ETH</span></div>
             <div class="card__time-right"><img src="./assets//icon-clock.svg" alt="img"> <span>3 days left</span></div>
         </div>
         <hr/>
         <div class="card__creator">
-            <div><img src="./assets/logo.jpeg" alt="img"></div>
+            <div><img src="https://media.licdn.com/dms/image/D5603AQHmisevs6V-Wg/profile-displayphoto-shrink_200_200/0/1711565017432?e=2147483647&v=beta&t=2gxdXF049G8KQ53xOdouFjL_DKFruEzC2XH5LmLtem4" alt="creator image"></div>
             <div><p>Creation of <b>Raghavendra Reddy</b></p></div>
         </div>
     </main>
     <footer class="attribution">
-        <p>Chalenged by <a href="https://www.crio.do" target="_blank">Crio.Do</a>. Coded by <a href="https://github.com/raghavendrareddy23", target="_blank">Raghavendra Reddy</a> </p>
+        <p>Chalenged by <a href="https://www.crio.do" target="_blank">Crio.Do</a>. Coded by <a href="https://www.github.com/raghavendrareddy23", target="_blank">Raghavendra Reddy</a> </p>
     </footer>
 </body>
 </html>
