--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
         <div class="card__title">
             <h1>Equilibrium #3429</h1>
         </div>
-        <div id="info">
-            Our Equilibrium collection promotes balance and calm.
-        </div>
-
+        <div id="info">Our Equilibrium collection promotes balance and calm.</div>
         <div class="card__time">
             <div class="card__time-left"><img src="./assets/icon-ethereum.svg" alt="img"> <span>0.041 ETH</span></div>
             <div class="card__time-right"><img src="./assets//icon-clock.svg" alt="img"> <span>3 days left</span></div>
